--- a/trialresults.html
+++ b/trialresults.html
@@ -315,12 +315,7 @@ function renderGrouped(grouped) {
 
         <!-- STUDENT HEADER -->
         <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;">
-          <h4 style="margin:0;">
-            👤 ${student}
-            <small style="font-weight:normal;color:#555;">
-              (Adm: <strong>${admission}</strong>)
-            </small>
-          </h4>
+          <h4> 👤 ${student} <small style="font-size: 2em;"> (<strong>Adm: ${admission}</strong>) </small> </h4>
           <div style="font-weight:bold;">
             ${supportFlag}
           </div>
