--- a/trialresults.html
+++ b/trialresults.html
@@ -121,16 +121,24 @@
 
   .learner-card {
     box-shadow: none;
+    margin-top: 10px;
+  }
+
+  h2 {
+    margin-top: 0;
+    margin-bottom: 6px;
+  }
+
+  h3 {
+    margin-bottom: 8px;
   }
 
   /* Prevent ugly splits INSIDE learner */
   .trend-box,
   table,
   thead,
-  tr,
   h4,
-  h5,
-  canvas {
+  h5 {
     page-break-inside: avoid;
     break-inside: avoid;
   }
@@ -146,11 +154,25 @@
     break-before: page;
   }
 
-  canvas {
-    max-height: 240px;
+  /* Allow first learner to start immediately after title */
+  #report > .learner-card:first-of-type {
+    page-break-before: auto !important;
+    break-before: auto !important;
   }
 }
 
+/* Chart sizing – screen & print */
+.trend-box {
+  height: 180px;
+  margin-top: 10px;
+}
+
+.trend-box canvas {
+  width: 100% !important;
+  height: 100% !important;
+}
+
+  
 </style>
 
 </head>
