--- a/trialresults.html
+++ b/trialresults.html
@@ -22,19 +22,14 @@
     margin: 0;
   }
 
+  .learner-card {
+    background: #ffffff;
+    border-radius: 8px;
+    padding: 16px;
+    margin: 20px 0;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  }
 
-.learner-card {
-  background: #ffffff;
-  border-radius: 8px;
-  padding: 16px;
-  margin: 12px 0; /* reduced */
-  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
-}
-
-#report .learner-page:first-child .learner-card {
-  margin-top: 0 !important;
-}
-  
   .learner-header {
     display: flex;
     justify-content: space-between;
@@ -112,13 +107,6 @@
   }
 
 
-.learner-page {
-  margin: 0;
-  padding: 0;
-}
-
-
-  
 @media print {
 
   body {
@@ -133,7 +121,11 @@
     display: none !important;
   }
 
-  
+  /* PAGE wrapper handles breaking */
+  .learner-page {
+    page-break-before: always;
+    break-before: page;
+  }
 
   /* first learner does NOT break */
   #report > .learner-page:first-child {
@@ -148,15 +140,6 @@
     box-shadow: none;
   }
 
-.page-break {
-  page-break-before: always;
-  break-before: page;
-  margin-top: 0 !important;
-  padding-top: 0 !important;
-}
-
-
-  
   /* keep internals together */
   table,
   thead,
@@ -172,25 +155,7 @@
   }
 }
 
-
-
- .trend-box {
-  height: 180px;
-  margin-top: 12px;
-}
-
-.trend-box canvas {
-  width: 100% !important;
-  height: 100% !important;
-}
-
-@media print {
-  h3 {
-    margin-top: 0;
-    margin-bottom: 6px;
-  }
-}
-
+  
 </style>
 
 </head>
@@ -305,7 +270,8 @@ const { data: termAverages } = await supabase
     .from("term_subject_report_view")
     .select("first_name,last_name,subject_name,average_score,achievement_level")
     .eq("term", termName)
-  
+    .eq("academic_year", SYSTEM_YEAR);
+
 
 trendMap = {};
 
@@ -948,8 +914,7 @@ window.downloadPDF = function () {
   const element = reportDiv;
 
  const opt = {
-margin: [4, 8, 6, 8],
-
+ margin: [6, 10, 6, 10],
    // top, right, bottom, left
   filename,
   image: { type: "jpeg", quality: 0.98 },
