--- a/trialresults.html
+++ b/trialresults.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -106,7 +106,6 @@
     margin-bottom: 6px;
   }
 
-
 @media print {
   body {
     background: #fff;
@@ -122,46 +121,66 @@
 
   .learner-card {
     box-shadow: none;
-    page-break-inside: auto;
-    break-inside: auto;
+    margin-top: 10px;
   }
 
-  /* Allow headings to flow */
-  h4,
-  h5 {
-    page-break-inside: auto;
-    break-inside: auto;
+  h2 {
+    margin-top: 0;
+    margin-bottom: 6px;
   }
 
-  /* Protect only what must stay together */
+  h3 {
+    margin-bottom: 8px;
+  }
+
+  /* Prevent ugly splits INSIDE learner */
+  .trend-box,
   table,
   thead,
-  tr,
-  .trend-box {
+  h4,
+  h5 {
     page-break-inside: avoid;
     break-inside: avoid;
   }
 
+  /* Repeat table headers correctly */
   thead {
     display: table-header-group;
   }
 
+  /* Force NEW learner on new page */
   .page-break {
     page-break-before: always;
     break-before: page;
   }
 
-  .trend-box {
-    height: 260px;
-  }
-
-  canvas {
-    width: 100% !important;
-    height: 100% !important;
+  /* Allow first learner to start immediately after title */
+  #report > .learner-card:first-of-type {
+    page-break-before: auto !important;
+    break-before: auto !important;
   }
 }
 
- 
+/* Chart sizing – screen & print */
+.trend-box {
+  height: 180px;
+  margin-top: 10px;
+}
+
+.trend-box canvas {
+  width: 100% !important;
+  height: 100% !important;
+}
+
+  @media print {
+
+  .learner-card {
+    margin: 0 0 12px 0;   /* bottom spacing only */
+    padding: 14px;
+  }
+
+}
+
 </style>
 
 </head>
@@ -392,9 +411,10 @@ function renderGrouped(grouped) {
     const recommendations = generateRecommendations(subjects, trend, supportFlag);
 
     return `
-      ${index === 0 ? "" : `<div class="page-break"></div>`}
+    
 
-      <div class="learner-card">
+    <div class="learner-card ${index > 0 ? "page-break" : ""}">
+
 
         <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;">
           <h4>👤 ${student} <small>(<strong>Adm: ${admission}</strong>)</small></h4>
@@ -919,8 +939,8 @@ window.downloadPDF = function () {
 
   const element = reportDiv;
 
-  const opt = {
-  margin: 10,
+ const opt = {
+  margin: [8, 10, 8, 10],   // top, right, bottom, left
   filename,
   image: { type: "jpeg", quality: 0.98 },
   html2canvas: { scale: 2, useCORS: true },
